--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" href="/wp_01.png">
     <link rel="stylesheet" href="css/framework7-icons.css">
+    <link rel="stylesheet" type="text/css" href="css/switch.min.css">
     <title>Wifi Poet</title>    
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
